Polish: Change font to Patrick Hand, center layout, update send icon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,9 +11,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <!-- Font imports: Merriweather (serif headings) + Geist (sans body) -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Geist:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
+  href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Geist:wght@400;500;600;700&family=Patrick+Hand&display=swap"
+  rel="stylesheet">
 </head>
 
 <body>
