Polish: Switch font to Architects Daughter

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
 
   <!-- Font imports: Merriweather (serif headings) + Geist (sans body) -->
   <link
-    href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Geist:wght@400;500;600;700&family=Caveat:wght@400;500;600;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Geist:wght@400;500;600;700&family=Architects+Daughter&display=swap"
     rel="stylesheet">
 </head>
 
