--- a/marketing-site/index.html
+++ b/marketing-site/index.html
@@ -6,34 +6,35 @@
     <title>G-Rump – AI-Powered Development Assistant</title>
     <meta name="description" content="Generate architectures, PRDs, and full-stack apps from natural language. Claude Code quality." />
     <style>
+      @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&family=Space+Mono:wght@500;700&display=swap');
       * { box-sizing: border-box; margin: 0; padding: 0; }
-      body { font-family: system-ui, -apple-system, sans-serif; line-height: 1.6; color: #1a1a1a; }
-      .container { max-width: 960px; margin: 0 auto; padding: 0 1.5rem; }
-      header { padding: 1.5rem 0; border-bottom: 1px solid #eee; }
-      nav { display: flex; justify-content: space-between; align-items: center; }
-      .logo { font-weight: 700; font-size: 1.25rem; }
+      body { font-family: "Space Grotesk", "Segoe UI", sans-serif; line-height: 1.6; color: #1B0F3A; background: radial-gradient(1200px 600px at 10% -10%, #EDE9FE 0%, #FFFFFF 55%), radial-gradient(900px 520px at 90% -20%, #DDD6FE 0%, #FFFFFF 60%), #FFFFFF; }
+      .container { max-width: 1040px; margin: 0 auto; padding: 0 1.75rem; }
+      header { padding: 1.5rem 0; border-bottom: 1px solid #E9D5FF; backdrop-filter: blur(12px); position: sticky; top: 0; background: rgba(255, 255, 255, 0.75); z-index: 10; }
+      nav { display: flex; justify-content: space-between; align-items: center; gap: 1rem; }
+      .logo { font-weight: 700; font-size: 1.35rem; letter-spacing: 0.01em; }
       .nav-links { display: flex; gap: 1.5rem; }
-      .nav-links a { color: #374151; text-decoration: none; }
-      .nav-links a:hover { color: #0ea5e9; }
-      .hero { padding: 4rem 0; text-align: center; }
-      .hero h1 { font-size: 2.5rem; margin-bottom: 1rem; }
-      .hero p { font-size: 1.25rem; color: #4b5563; max-width: 36rem; margin: 0 auto 2rem; }
-      .cta { display: inline-block; background: #0ea5e9; color: #fff; padding: 0.75rem 1.5rem; border-radius: 0.5rem; text-decoration: none; font-weight: 600; }
-      .cta:hover { background: #0284c7; }
-      section { padding: 3rem 0; }
-      section h2 { font-size: 1.75rem; margin-bottom: 1.5rem; }
+      .nav-links a { color: #4C1D95; text-decoration: none; font-weight: 500; }
+      .nav-links a:hover { color: #7C3AED; }
+      .hero { padding: 5rem 0 4rem; text-align: center; }
+      .hero h1 { font-size: clamp(2.5rem, 4vw, 3.5rem); margin-bottom: 1rem; }
+      .hero p { font-size: 1.2rem; color: #5B21B6; max-width: 38rem; margin: 0 auto 2rem; }
+      .cta { display: inline-flex; align-items: center; gap: 0.5rem; background: linear-gradient(135deg, #7C3AED, #5B21B6); color: #fff; padding: 0.8rem 1.75rem; border-radius: 999px; text-decoration: none; font-weight: 600; box-shadow: 0 10px 24px rgba(124, 58, 237, 0.28); }
+      .cta:hover { transform: translateY(-1px); }
+      section { padding: 3.5rem 0; }
+      section h2 { font-size: 1.85rem; margin-bottom: 1.5rem; }
       .features { display: grid; grid-template-columns: repeat(auto-fit, minmax(260px, 1fr)); gap: 1.5rem; }
-      .feature { border: 1px solid #e5e7eb; border-radius: 0.5rem; padding: 1.5rem; }
-      .feature h3 { font-size: 1.125rem; margin-bottom: 0.5rem; }
-      .feature p { color: #6b7280; font-size: 0.9375rem; }
+      .feature { border: 1px solid #E9D5FF; border-radius: 1rem; padding: 1.75rem; background: rgba(255, 255, 255, 0.7); box-shadow: 0 12px 30px rgba(91, 33, 182, 0.08); }
+      .feature h3 { font-size: 1.15rem; margin-bottom: 0.5rem; }
+      .feature p { color: #5B21B6; font-size: 0.95rem; }
       .pricing { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 1.5rem; margin-top: 2rem; }
-      .plan { border: 2px solid #e5e7eb; border-radius: 0.5rem; padding: 1.5rem; }
-      .plan.highlight { border-color: #0ea5e9; }
+      .plan { border: 2px solid #E9D5FF; border-radius: 1rem; padding: 1.75rem; background: #FFFFFF; }
+      .plan.highlight { border-color: #7C3AED; box-shadow: 0 12px 28px rgba(124, 58, 237, 0.2); }
       .plan h3 { font-size: 1.25rem; margin-bottom: 0.25rem; }
-      .plan .price { font-size: 1.5rem; font-weight: 700; margin: 0.5rem 0; }
-      .plan ul { list-style: none; font-size: 0.9375rem; color: #4b5563; }
+      .plan .price { font-size: 1.6rem; font-weight: 700; margin: 0.5rem 0; color: #5B21B6; }
+      .plan ul { list-style: none; font-size: 0.95rem; color: #4C1D95; }
       .plan li { margin: 0.25rem 0; }
-      footer { padding: 2rem 0; border-top: 1px solid #eee; color: #6b7280; font-size: 0.875rem; text-align: center; }
+      footer { padding: 2rem 0; border-top: 1px solid #E9D5FF; color: #6D28D9; font-size: 0.875rem; text-align: center; }
     </style>
   </head>
   <body>
@@ -112,7 +113,7 @@
       </section>
     </main>
     <footer>
-      <div class="container">G-Rump – AI-Powered Development Assistant. Product of Miles Project.</div>
+      <div class="container">G-Rump – AI-Powered Development Assistant.</div>
     </footer>
   </body>
 </html>
